<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ikea_testframework</groupId>
	<artifactId>ikea_testframework</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<webdrivermanager.version>4.4.3</webdrivermanager.version>
		<selenium-java.version>4.0.0-alpha-5</selenium-java.version>
		<junit.version>4.13.2</junit.version>
		<testng.version>7.6.0</testng.version>
		<cucumber.version>6.9.0</cucumber.version>
		<log4j.version>2.17.2</log4j.version>
		<extentreportsadapter.version>2.6.0</extentreportsadapter.version>
		<maven.compiler.version>3.8.1</maven.compiler.version>
		<maven.surefire.version>3.0.0-M7</maven.surefire.version>
		<maven.failsafe.version>3.0.0-M3</maven.failsafe.version>
		<maven.jacoco.version>0.8.6</maven.jacoco.version>
		<junit.jupiter.version>5.8.2</junit.jupiter.version>
		<junit.platform.version>1.8.2</junit.platform.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${webdrivermanager.version}</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<!-- <version>3.141.59</version> -->
			<version>${selenium-java.version}</version>
			<!-- <version>4.0.0-beta-4</version> -->
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-testng</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.junit.jupiter</groupId>-->
<!--			<artifactId>junit-jupiter-engine</artifactId>-->
<!--			<version>${junit.jupiter.version}</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.junit.jupiter</groupId>-->
<!--			<artifactId>junit-jupiter-api</artifactId>-->
<!--			<version>${junit.jupiter.version}</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.junit.jupiter</groupId>-->
<!--			<artifactId>junit-jupiter-params</artifactId>-->
<!--			<version>${junit.jupiter.version}</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.junit.platform</groupId>-->
<!--			<artifactId>junit-platform-suite</artifactId>-->
<!--			<version>${junit.platform.version}</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>tech.grasshopper</groupId>
			<artifactId>extentreports-cucumber6-adapter</artifactId>
			<version>${extentreportsadapter.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.ralfstuckert.pdfbox-layout</groupId>
			<artifactId>pdfbox2-layout</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>2.0.22</version>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>mulesoft-releases</id>
			<name>MuleSoft Repository</name>
			<url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${maven.jacoco.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${project.build.directory}/jacoco-ut.exec</destFile>
							<propertyName>surefireArgLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.build.directory}/jacoco-ut.exec</dataFile>
<!--							<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>-->
							<outputDirectory>${project.build.directory}/jacoco-ut</outputDirectory>
						</configuration>
					</execution>
					</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>3.0.0-M7</version>
					</dependency>
<!--					<dependency>-->
<!--						<groupId>org.apache.maven.surefire</groupId>-->
<!--						<artifactId>surefire-testng</artifactId>-->
<!--						<version>3.0.0-M7</version>-->
<!--					</dependency>-->
				</dependencies>
				<configuration>
					<includes>
<!--						<include>**/CucumberTestngTest.java</include>-->
						<include>**/CucumberJunitTest.java</include>
					</includes>
					<parallel>methods</parallel>
					<threadCount>4</threadCount>
					<useUnlimitedThreads>false</useUnlimitedThreads>
					<printSummary>false</printSummary>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<forkCount>0</forkCount>
					<forkedProcessExitTimeoutInSeconds>60</forkedProcessExitTimeoutInSeconds>
<!--					<reuseForks>true</reuseForks>-->
					<forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
					<argLine>@{surefireArgLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>

			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven.failsafe.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<parallel>methods</parallel>
							<threadCount>4</threadCount>
							<perCoreThreadCount>false</perCoreThreadCount>
						</configuration>
					</execution>
				</executions>
			</plugin> -->

		</plugins>
	</build>
</project>